# expense-api-python

./: .env  .gitignore  .pyre_configuration  .test.env  README.md  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 3fb4e8cf87ce_create_citext_extension.py  40bf940a2689_create_user_table.py
app/: main.py
app/database/: __init__.py  database_session_manager.py
app/dependencies/: __init__.py
app/domain/models/: application_settings.py  user.py
app/domain/repositories/: user_repostory.py
app/domain/services/: user_service.py
app/infrastructure/database/: __init__.py  database_session_manager.py
app/infrastructure/entities/: user.py
app/infrastructure/repositories/: user_repository.py
app/models/: user.py
app/repositories/: user_repository.py
app/schemas/: __init__.py  application_settings.py  settings.py  user.py
app/utils/: password.py
tests/: conftest.py  db_utils.py  test_bla.py
tests/factories/: user_factory.py
tests/repositories/: test_user_repository.py
