[tool.poetry]
name = "expense-api-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
asyncpg = "^0.29.0"
uvicorn = "^0.31.1"
alembic = "^1.13.3"
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
